# Drip

./: README.md  package.json
client/: docs.html  index.html  landing.html
client/idl/: README.md
client/src/: app.js  chain.js
onchain/: .gitignore  Anchor.toml  README.md  package.json
onchain/keeper/: keeper.js
onchain/migrations/: init.js
onchain/programs/drip-perps/: Cargo.toml
onchain/programs/drip-perps/src/: engine.rs  errors.rs  lib.rs  state.rs
onchain/tests/: drip-perps.ts
server/: index.js
