[package]
name = "drip-perps"
version = "0.1.0"
description = "Drip — on-chain permissionless perps DEX powered by a percolator-style solvency engine (devnet prototype)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "drip_perps"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
# Pyth pull-oracle (price update accounts). Pin may need a bump at `anchor build`.
pyth-solana-receiver-sdk = "0.3.1"
